Change Log

2009-05-31
	Implemented real number multiplication (*).
	Just try: (expt 9.9 999999999). Is this cool?
	Intercepted numeric underflow and overflow.
	Added test cases for real *.
	Added #E and #I syntax.
	Added real number test cases for #E, #I, EXACT->INEXACT,
	INEXACT->EXACT, NEGATIVE?, POSITIVE?, ZERO?.
2009-05-30
	Fixed INEXACT->EXACT (sign error).
	Implemented real -.
	Implemented exactness in
	- the +, MIN, and MAX procedures;
	- bignum-->real conversion;
	- real number normalization.
	Added real number tests for -, ABS, MIN, MAX.
	Added test cases for EXACT->INEXACT and INEXACT->EXACT.
2009-05-29
	Implementated real +.
	Implemented EXACT? and INEXACT?.
	Implemented EXACT->INEXACT and INEXACT->EXACT.
	Fixed a few bugs in real <.
	Added real number tests for +.
2009-05-28
	Added more test cases for real <.
	Extended domains of <=, >, >= to real.
	Added real number tests for <=, >, and >=.
	* Please stress-test the real number routines
	* and do report errors!
	* Suggestions for additional tests are welcome!
2009-05-27
	Added mantissa size to magic ID of image files.
	Implemented comparison of real numbers in <.
	Added real number tests for <.
2009-05-26
	Moved sign of reals to flags field in order to allow for -0.0.
	Changed flat_copy() so that it can copy special atoms, too.
	Added real number tests for =.
	Cleanup.
2009-05-25
	Added a reader and printer for real numbers.
	Implemented internal representation for real numbers.
	Implemented comparison of real numbers in =.
	Added more syntax tests to test suite (primarily in order to test
	the real number reader and printer).
	Added REAL? predicate.
	Made NUMBER? an alias of REAL?.
	Applied some minor cosmetics.
	* Note that you cannot yet do anything really useful with
	* real numbers other than translating them from/to external
	* representation and comparing them.
2009-05-24
	Added code to detect real number syntax and dispatch it to
	a specialized reader. Yes, this is a first step toward real