@@ -2,13 +2,12 @@
 .\" By Nils M Holm, 2007, 2008, 2009
 .ll 70
 .lt 70
-.ds N "pi
-.de HD		\" Header
+.de HD		\" header
 'sp 1v
 .tl 'S9(1)'Scheme 9 from Empty Space'S9(1)'
 'sp 2v
 ..
-.de FO		\" Footer
+.de FO		\" footer
 'sp 3v
 .tl 'S9 Interpreter'Page %'S9(1)'
 'bp
@@ -28,7 +27,7 @@
 .de I
 \fI\\$1\fP
 ..
-.de SH		\" subheader macro
+.de SH		\" subheading
 .ne 5
 .sp
 .in 0i
@@ -37,17 +36,9 @@
 .fi
 .in 1i
 ..
-.de ST		\" start a table
-.in 1i
-.nf
-..
-.de ET		\" end a table
-.fi
-.in 0
-..
 .wh 0 HD	\" traps for header
 .wh -5 FO	\" and footer
-.nh		\" disable hyphenation
+.nh
 .sp
 .SH NAME
 .B "s9
@@ -129,7 +120,11 @@ environments. It employs a constant-space mark and sweep garbage
 collector with in-situ string and vector pool compaction. Memory
 pools grow on demand.
 .br
-The interpreter uses bignum integer arithmetics exclusively.
+The interpreter uses arbitrary-precision integer arithmetics and
+decimal-based floating point arithmetics. Real numbers are represented
+by
+.I exact
+values as long as the internal representation allows for it.
 It provides both low-level macros (see
 .B MACROS
 below) and \fBdefine-syntax\fP/\fBsyntax-rules\fP.
@@ -160,6 +155,16 @@ that does not use quasiquotation.
 If
 .I form
 applies a macro, return the expanded form, else return the form.
+.in -4
+.br
+.ne 3
+.B "(exponent real) ==> integer
+.in +4
+Return the exponent of the internal representation of
+.IR real .
+When
+.I real
+is an integer, return 0.
 .in -4
 .br
 .ne 3
@@ -228,6 +233,16 @@ When the file can be located, return its full path, else
 return \fB#f\fP.
 .in -4
 .br
+.ne 3
+.B "(mantissa real) ==> integer
+.in +4
+Return the mantissa of the internal representation of
+.IR real .
+When
+.I real
+is an integer, return that integer.
+.in -4
+.br
 .ne 2
 .B "(print form ...) ==> unspecific
 .in +4
@@ -272,7 +287,7 @@ Return a list of all defined symbols.
 .B "(trace #t) ==> list | #t
 .in +4
 Trace the procedure or syntax bound to the given
-.IR symbols .
+.IR symbol s.
 When
 .B #t
 is passed to
@@ -421,12 +436,9 @@ Transcripts:
 .BR transcript-off ,
 .BR transcript-on .
 .br
-Numeric tower: rational, float (work in progress), complex numbers.
+Numeric tower: rational and complex numbers.
 .br
-Numeric syntax and procedures:
-.BR #e ,
-.BR #i ,
-.BR / ,
+Numeric procedures:
 .BR acos ,
 .BR angle ,
 .BR asin ,
