@@ -53,10 +53,10 @@ TECHNICAL DETAILS
           hashed  environments.  It  employs a constant-space mark and
           sweep garbage collector with in-situ string and vector  pool
           compaction. Memory pools grow on demand.
-          The interpreter uses bignum integer arithmetics exclusively.
-          It provides both low-level macros  (see  MACROS  below)  and
-
-
+          The interpreter uses arbitrary-precision integer arithmetics
+          and decimal-based floating point arithmetics.  Real  numbers
+          are  represented  by  exact  values  as long as the internal
+          representation allows for it.  It  provides  both  low-level
 
 
 
@@ -68,7 +68,7 @@ S9 Interpreter                  Page 1                           S9(1)
 S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
-          define-syntax/syntax-rules.
+          macros (see MACROS below) and define-syntax/syntax-rules.
 
 ADDITIONS
           These S9fES procedures are not in R4RS:
@@ -83,28 +83,34 @@ ADDITIONS
           (expand-macro form) ==> expanded-form
               If  form applies a macro, return the expanded form, else
               return the form.
+          (exponent real) ==> integer
+              Return the exponent of the  internal  representation  of
+              real.  When real is an integer, return 0.
           (file-exists? string) ==> boolean
-              Return #t if the file specifed in  the  string  argument
+              Return  #t  if  the file specifed in the string argument
               exists and otherwise #f.
           (fold-left proc base list ...) ==> form
-              Combine  the  elements of the lists using proc.  Combine
-              elements  left-associatively.   Base  is  the   leftmost
+              Combine the elements of the lists using  proc.   Combine
+              elements   left-associatively.   Base  is  the  leftmost
               element.
           (fold-right proc base list ...) ==> form
-              Combine  the  elements of the lists using proc.  Combine
-              elements right-associatively.   Base  is  the  rightmost
+              Combine the elements of the lists using  proc.   Combine
+              elements  right-associatively.   Base  is  the rightmost
               element.
           (gensym) ==> symbol
           (gensym string) ==> symbol
-              Return  a fresh symbol. When a string argument is given,
+              Return a fresh symbol. When a string argument is  given,
               use it as prefix for the fresh symbol.
           (load-from-library string) ==> unspecific
-              Attempt to load the file string from each  directory  of
+              Attempt  to  load the file string from each directory of
               S9FES_LIBRARY_PATH.
           (locate-file string) ==> string | #f
               Search  for  the  file  string  in  each   directory  of
-              S9FES_LIBRARY_PATH in sequence.  When the  file  can  be
+              S9FES_LIBRARY_PATH  in  sequence.   When the file can be
               located, return its full path, else return #f.
+          (mantissa real) ==> integer
+              Return the mantissa of the  internal  representation  of
+              real.  When real is an integer, return that integer.
           (print form ...) ==> unspecific
               Write multiple forms separated by spaces.
           (set-input-port! input-port) ==> unspecific
@@ -118,13 +124,7 @@ ADDITIONS
               evaluation. Note that form must be quoted.
           (symbols) ==> list
               Return a list of all defined symbols.
-          (trace symbol ...) ==> list | #t
-          (trace #t) ==> list | #t
-              Trace  the  procedure  or  syntax  bound  to  the  given
-              symbols.    When  #t  is  passed  to  trace,  trace  all
-              procedures and syntax (expect lots of output!). When  no
-              arguments  are  passed  to  it,  disable tracing.  Trace
-              returns the symbols that were being  traced  before  its
+
 
 
 
@@ -134,6 +134,13 @@ S9 Interpreter                  Page 2                           S9(1)
 S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
+          (trace symbol ...) ==> list | #t
+          (trace #t) ==> list | #t
+              Trace  the  procedure  or  syntax  bound  to  the  given
+              symbols.    When  #t  is  passed  to  trace,  trace  all
+              procedures and syntax (expect lots of output!). When  no
+              arguments  are  passed  to  it,  disable tracing.  Trace
+              returns the symbols that were being  traced  before  its
               invocation.
           (void) ==> unspecific
               Return an unspecific value.
@@ -185,13 +192,6 @@ MACROS
           to be a procedure. Like in define forms the  second  variant
           implies a procedure definition.
 
-          Macros  may contain applications of macros that were defined
-          earlier.  Macros may not  recurse  directly,  but  they  may
-          implement  recursion internally using letrec or by rewriting
-          their own applications. The following  macro,  for  example,
-          does not work, because d is undefined in the body of d:
-
-
 
 
 S9 Interpreter                  Page 3                           S9(1)
@@ -199,6 +199,12 @@ S9 Interpreter                  Page 3                           S9(1)
 
 S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
+
+          Macros  may contain applications of macros that were defined
+          earlier.  Macros may not  recurse  directly,  but  they  may
+          implement  recursion internally using letrec or by rewriting
+          their own applications. The following  macro,  for  example,
+          does not work, because d is undefined in the body of d:
 
           (define-macro (d x) (and (pair? x) (d (cdr x)))) ; wrong
 
@@ -226,20 +232,19 @@ LIMITATIONS
           Control: call-with-current-continuation.
           I/O: char-ready?.
           Transcripts: transcript-off, transcript-on.
-          Numeric tower: rational, float (work in  progress),  complex
-          numbers.
-          Numeric syntax and procedures: #e, #i, /, acos, angle, asin,
-          atan, ceiling, complex?, cos, denominator, exp, floor, imag-
-          part,    log,   magnitude,   make-polar,   make-rectangular,
-          numerator, rational,  rationalize,  real-part,  round,  sin,
-          sqrt, tan, truncate.
+          Numeric tower: rational and complex numbers.
+          Numeric  procedures:  acos,  angle,  asin,  atan,   ceiling,
+          complex?,  cos,  denominator,  exp,  floor,  imag-part, log,
+          magnitude,    make-polar,    make-rectangular,    numerator,
+          rational,  rationalize,  real-part,  round,  sin, sqrt, tan,
+          truncate.
 
 BUGS
           Nested quasiquotation is currently unsupported.
 
 FILES
           $HOME/.s9fes/rc
-              If  present,  this  file  is loaded when the interpreter
+              If present, this file is  loaded  when  the  interpreter
               starts up.
           @LIBDIR@
               The S9fES procedure library (source code).
@@ -250,13 +255,8 @@ FILES
           *.scm
               Scheme source code.
 
-ENVIRONMENT
-          S9FES_LIBRARY_PATH
-              A colon-separated list  of  directories  which  will  be
-              searched  for  the  s9  library  when the interpreter is
-              launched. The same directories will  be  search  by  the
-              locate-file procedure.
-              Default: .:~/.s9fes:@LIBDIR@:@LIBDIR@/contrib
+
+
 
 
 
@@ -267,8 +267,16 @@ S9(1)                  Scheme 9 from Empty Space                 S9(1)
 
 
 
+ENVIRONMENT
+          S9FES_LIBRARY_PATH
+              A  colon-separated  list  of  directories  which will be
+              searched for the s9  library  when  the  interpreter  is
+              launched.  The  same  directories  will be search by the
+              locate-file procedure.
+              Default: .:~/.s9fes:@LIBDIR@:@LIBDIR@/contrib
+
 SIGNALS
-          These  work  only  if  POSIX  signal handling was enabled at
+          These work only if POSIX  signal  handling  was  enabled  at
           compile time.
 
           SIGINT
@@ -282,19 +290,11 @@ REFERENCES
 
           http://www.lulu.com/content/1010408
           http://t3x.org/nmh/book-pdfs/scheme-9-from-empty-space.zip
-              Scheme  9  from  Empty  Space -- A Guide to Implementing
+              Scheme 9 from Empty Space --  A  Guide  to  Implementing
               Scheme in C.
 
 AUTHOR
           Nils M Holm < nmh at t3x.org >
-
-
-
-
-
-
-
-
 
 
 
