@@ -149,7 +149,7 @@
 #ifdef BITS_PER_WORD_64
  #define DIGITS_PER_WORD	18
  #define INT_SEG_LIMIT		1000000000000000000
- #define MANTISSA_SEGMENTS	1
+ #define MANTISSA_SEGMENTS	2
 #else
  #ifdef BITS_PER_WORD_32
   #define DIGITS_PER_WORD	9
