@@ -427,6 +427,7 @@
 (test (boolean? #f) #t)
 (test (boolean? #\c) #f)
 (test (boolean? 1) #f)
+(test (boolean? 0.1) #f)
 (test (boolean? '(pair)) #f)
 (test (boolean? (lambda () #f)) #f)
 (test (boolean? "string") #f)
@@ -438,6 +439,7 @@
 (test (char? #f) #f)
 (test (char? #\c) #t)
 (test (char? 1) #f)
+(test (char? 0.1) #f)
 (test (char? '(pair)) #f)
 (test (char? (lambda () #f)) #f)
 (test (char? "string") #f)
@@ -449,6 +451,7 @@
 (test (input-port? #f) #f)
 (test (input-port? #\c) #f)
 (test (input-port? 1) #f)
+(test (input-port? 0.1) #f)
 (test (input-port? '(pair)) #f)
 (test (input-port? (lambda () #f)) #f)
 (test (input-port? "string") #f)
@@ -460,6 +463,8 @@
 (test (integer? #f) #f)
 (test (integer? #\c) #f)
 (test (integer? 1) #t)
+(test (integer? 1.0) #t)
+(test (integer? 0.1) #f)
 (test (integer? '(pair)) #f)
 (test (integer? (lambda () #f)) #f)
 (test (integer? "string") #f)
@@ -471,6 +476,7 @@
 (test (number? #f) #f)
 (test (number? #\c) #f)
 (test (number? 1) #t)
+(test (number? 0.1) #t)
 (test (number? '(pair)) #f)
 (test (number? (lambda () #f)) #f)
 (test (number? "string") #f)
@@ -482,6 +488,7 @@
 (test (output-port? #f) #f)
 (test (output-port? #\c) #f)
 (test (output-port? 1) #f)
+(test (output-port? 0.1) #f)
 (test (output-port? '(pair)) #f)
 (test (output-port? (lambda () #f)) #f)
 (test (output-port? "string") #f)
@@ -493,6 +500,7 @@
 (test (pair? #f) #f)
 (test (pair? #\c) #f)
 (test (pair? 1) #f)
+(test (pair? 0.1) #f)
 (test (pair? '(pair)) #t)
 (test (pair? (lambda () #f)) #f)
 (test (pair? "string") #f)
@@ -504,6 +512,7 @@
 (test (port? #f) #f)
 (test (port? #\c) #f)
 (test (port? 1) #f)
+(test (port? 0.1) #f)
 (test (port? '(pair)) #f)
 (test (port? (lambda () #f)) #f)
 (test (port? "string") #f)
@@ -515,6 +524,7 @@
 (test (procedure? #f) #f)
 (test (procedure? #\c) #f)
 (test (procedure? 1) #f)
+(test (procedure? 0.1) #f)
 (test (procedure? '(procedure)) #f)
 (test (procedure? (lambda () #f)) #t)
 (test (procedure? "string") #f)
@@ -526,6 +536,7 @@
 (test (string? #f) #f)
 (test (string? #\c) #f)
 (test (string? 1) #f)
+(test (string? 0.1) #f)
 (test (string? '(pair)) #f)
 (test (string? (lambda () #f)) #f)
 (test (string? "string") #t)
@@ -537,6 +548,7 @@
 (test (symbol? #f) #f)
 (test (symbol? #\c) #f)
 (test (symbol? 1) #f)
+(test (symbol? 0.1) #f)
 (test (symbol? '(pair)) #f)
 (test (symbol? (lambda () #f)) #f)
 (test (symbol? "string") #f)
@@ -548,6 +560,7 @@
 (test (vector? #f) #f)
 (test (vector? #\c) #f)
 (test (vector? 1) #f)
+(test (vector? 0.1) #f)
 (test (vector? '(pair)) #f)
 (test (vector? (lambda () #f)) #f)
 (test (vector? "string") #f)
@@ -1024,6 +1037,55 @@
 (test (* -1234567. 12345.67) -1.524155677489e10)
 (test (* 1.0   2   3   4   5   6   7   8   9) 362880.0)
 (test (* 1.1 2.2 3.3 4.4 5.5 6.6 7.7 8.8 9.9) 855652.05811008)
+
+(test (/ 0.0  0.1) 0.0)
+(test (/ 0.0  1.0) 0.0)
+(test (/ 0.0 -0.1) 0.0)
+(test (/ 0.0 -1.0) 0.0)
+(test (/ 0.1  0.1) 1.0)
+(test (/ 0.1  1.0) 0.1)
+(test (/ 0.1 -0.1) -1.0)
+(test (/ 0.1 -1.0) -0.1)
+(test (/ 1.0  0.1) 10.0)
+(test (/ 1.0  1.0) 1.0)
+(test (/ 1.0 -0.1) -10.0)
+(test (/ 1.0 -1.0) -1.0)
+(test (/  12345.  123.45) 100.0)
+(test (/  12345. -123.45) -100.0)
+(test (/ -12345.  123.45) -100.0)
+(test (/ -12345. -123.45) 100.0)
+(test (/  152337.3  123.4) 1234.5)
+(test (/  152337.3 -123.4) -1234.5)
+(test (/ -152337.3  123.4) -1234.5)
+(test (/ -152337.3 -123.4) 1234.5)
+(test (/  1.52399025e+204  123.45e+100) 123.45e+100)
+(test (/ -1.52399025e+204 -123.45e+100) 123.45e+100)
+(test (/ -1.52399025e+204  123.45e+100) -123.45e+100)
+(test (/  1.52399025e+204 -123.45e+100) -123.45e+100)
+(test (/  1.52399025e-196  123.45e-100) 123.45e-100)
+(test (/ -1.52399025e-196 -123.45e-100) 123.45e-100)
+(test (/ -1.52399025e-196  123.45e-100) -123.45e-100)
+(test (/  1.52399025e-196 -123.45e-100) -123.45e-100)
+(test (/ 12345.67 .1234567) 100000.0)
+(test (/ 12345.67 1.234567) 10000.0)
+(test (/ 12345.67 12.34567) 1000.0)
+(test (/ 12345.67 123.4567) 100.0)
+(test (/ 12345.67 1234.567) 10.0)
+(test (/ 12345.67 12345.67) 1.0)
+(test (/ 12345.67 123456.7) 0.1)
+(test (/ 12345.67 1234567.) 0.01)
+(test (/ -.1234567 12345.67) -0.00001)
+(test (/ -1.234567 12345.67) -0.0001)
+(test (/ -12.34567 12345.67) -0.001)
+(test (/ -123.4567 12345.67) -0.01)
+(test (/ -1234.567 12345.67) -0.1)
+(test (/ -12345.67 12345.67) -1.0)
+(test (/ -123456.7 12345.67) -10.0)
+(test (/ -1234567. 12345.67) -100.0)
+(test (/ 1.0) 1.0)
+(test (/ 2.0) 0.5)
+(test (/ 5.0) 0.2)
+(test (/ 128.0 64 32 16 8 4 2 1) 6.103515625e-5)
 
 (test (<  1234567890  9876543210) #t)
 (test (<  1234567890 -9876543210) #f)
@@ -1594,6 +1656,29 @@
 (test (expt -2 3) -8)
 (test (expt -2 4) 16)
 (test (expt 2 100) 1267650600228229401496703205376)
+
+(test (expt 0. 2) 0)
+(test (expt 2.0 0) 1.0)
+(test (expt 2.0 1) 2.0)
+(test (expt 2.0 2) 4.0)
+(test (expt 2.0 3) 8.0)
+(test (expt -2.0 3) -8.0)
+(test (expt -2.0 4) 16.0)
+(test (expt 2.0 40) 1.099511627776e+12)
+
+(test (expt 1 -1) 1.0)
+(test (expt  2 -1) 0.5)
+(test (expt -2  -1) -0.5)
+(test (expt  2  -1) 0.5)
+(test (expt  2  -2) 0.25)
+(test (expt -2  -2) 0.25)
+(test (expt  2  -3) 0.125)
+(test (expt -2  -3) -0.125)
+(test (expt  2 -10) 0.0009765625)
+(test (expt -2 -10) 0.0009765625)
+(test (expt 10   -10) 1.0e-10)
+(test (expt 10  -100) 1.0e-100)
+(test (expt 10 -1000) 1.0e-1000)
 
 (test (gcd) 0)
 (test (gcd 17) 17)
